Add ftp, fix webalizer, etc
 - Add vsftpd to module and and fix ftp webalizer
   + manifests/ftp.pp.
   + files/webalizer/ftp.conf.
 - Add temporary webcontent:
   + files/htaccess/root.htaccess
   + files/www/HEADER.html
   + files/www/README.html
   + files/www/style.css
   + manifests/content/self.pp
   + manifests/vhost/buaya.pp
 - Fix crontab at suro, manifests/cron/suro.pp

Signed-off-by: Mahyuddin Susanto <udienz@gmail.com>

--- a/files/webalizer/ftp.conf
+++ b/files/webalizer/ftp.conf
@@ -1,4 +1,4 @@
-LogFile        /var/log/proftpd/xferlog
+LogFile        /var/log/xferlog
 LogType 	ftp
 OutputDir      /home/ftpmaster/data/report/ftp/
 HistoryName     webalizer.hist
@@ -15,8 +15,8 @@ PageType        shtml
 #PageType       php3
 #PageType       pl
 
-DNSCache        /home/ftpmaster/data/dns_cache.db
-DNSChildren     20
+#DNSCache        /home/ftpmaster/data/dns_cache.db
+#DNSChildren     20
 
 Quiet           yes
 
