change log into right place
Signed-off-by: Mahyuddin Susanto <udienz@gmail.com>

--- a/files/webalizer/ftp.conf
+++ b/files/webalizer/ftp.conf
@@ -1,4 +1,4 @@
-LogFile        /var/log/proftpd/xferlog
+LogFile        /var/log/vsftpd.log
 LogType 	ftp
 OutputDir      /home/ftpmaster/data/report/ftp/
 HistoryName     webalizer.hist
